--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "angular": "^1.3.0",
     "firebase": "2.2.2",
-    "angularfire": "1.0.0"
+    "angularfire": "1.0.0",
+    "angular-material": "^1.0.9",
+    "angular-ui-router": "^0.3.1",
+    "lodash": "^4.13.1"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
