--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": {},
   "devDependencies": {
     "chalk": "^0.4.0",
+    "connect-modrewrite": "^0.9.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
     "grunt-concurrent": "^1.0.0",
