--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-google-cdn": "^0.4.3",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
+    "grunt-sass": "^1.2.0",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
