--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "monikersApp"
+  "moduleName": "monikersApp",
+  "resolutions": {
+    "angular": "1.5.8"
+  }
 }
