--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angularfire": "1.0.0",
     "angular-material": "^1.0.9",
     "angular-ui-router": "^0.3.1",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "angular-timer": "^1.3.4"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
