--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "dependencies": {},
   "repository": {},
   "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "chalk": "^0.4.0",
     "connect-modrewrite": "^0.9.0",
+    "eslint": "^3.8.0",
+    "eslint-plugin-angular": "^1.4.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
+    "grunt-babel": "^6.0.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
