--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-material": "^1.0.9",
     "angular-ui-router": "^0.3.1",
     "lodash": "^4.13.1",
-    "angular-timer": "^1.3.4"
+    "angular-timer": "^1.3.4",
+    "ngstorage": "^0.3.11"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
